--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fruitland",
-  "version": "0.1.0",
+  "name": "hazare-dairy-farm",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
